# 3D-Game-Engine

./: .gitattributes  .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build.yml
assets/: .gitkeep
assets/animations/: .gitkeep
assets/models/: .gitkeep
assets/scenes/: .gitkeep
assets/shaders/: default.frag  default.vert  skinned.vert
assets/textures/: .gitkeep
src/: main.cpp
src/animation/: AnimationClip.cpp  AnimationClip.h  AnimationLoader.cpp  AnimationLoader.h  AnimationState.cpp  AnimationState.h  AnimationStateMachine.cpp  AnimationStateMachine.h  Animator.cpp  Animator.h  Skeleton.cpp  Skeleton.h
src/character/: CharacterController.cpp  CharacterController.h
src/core/: Application.cpp  Application.h  Input.cpp  Input.h  Layer.h  Logger.cpp  Logger.h  Window.cpp  Window.h
src/debug/: ImGuiLayer.cpp  ImGuiLayer.h
src/foliage/: FoliageSystem.cpp  FoliageSystem.h
src/physics/: PhysicsWorld.cpp  PhysicsWorld.h
src/renderer/: AnimatedModel.cpp  AnimatedModel.h  GBuffer.cpp  GBuffer.h  GPUAnimator.cpp  GPUAnimator.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Primitives.cpp  Primitives.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureUtils.cpp  TextureUtils.h
src/scene/: Camera.cpp  Camera.h  Entity.h  GameLayer.cpp  GameLayer.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
src/utils/: FileSystem.cpp  FileSystem.h  MathUtils.cpp  MathUtils.h  Profiler.cpp  Profiler.h  ResourceManager.cpp  ResourceManager.h
